--- a/Northwind.Business/Northwind.Business.csproj
+++ b/Northwind.Business/Northwind.Business.csproj
@@ -41,13 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\ICategoryService.cs" />
-    <Compile Include="Abstract\IProductService.cs" />
-    <Compile Include="Concrete\CategoryManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Northwind.DataAccess\Northwind.DataAccess.csproj">
       <Project>{7755c4e9-ddc4-4bc8-8d94-15385c5ab9bb}</Project>
